# cargo-rest-example

./: README.md  pyproject.toml
cargo/bikes/: models.py  serializers.py  tests.py  views.py
cargo/bikes/management/commands/: importdata.py
cargo/bikes/migrations/: 0001_initial.py
cargo/cargo/: asgi.py  settings.py  urls.py  wsgi.py
